--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -99,6 +99,21 @@ a {
     visibility: visible;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+
+
 @media (min-width: 992px) {
     .navbar {
         flex: 0 0 auto;
