--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,3 @@
-// Required
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
@@ -6,19 +5,39 @@
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/utilities";
 
-// Create your own map
+// Custom colors
 $custom-colors: (
-  "navy": #01153e,
-  "navy-secondary": #2C4B8A,
-  "navy-tertiary": #9dbdff,
+  "blue": #6171FF,
   "vivid-orange": #FF5E0E
 );
 
-// Merge the maps
+// Merge custom colors with theme colors
 $theme-colors: map-merge($theme-colors, $custom-colors);
 
-$all-colors: map-merge-multiple($blues, $indigos, $purples, $pinks, $reds, $oranges, $yellows, $greens, $teals, $cyans, $custom-colors);
+// Recreate theme-colors-rgb map
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 
+// Set the base spacer
+$spacer: 1rem;
+
+// Font sizes
+$display-font-sizes: (
+  1: 3rem,
+  2: 2.5rem,
+  3: 2rem,
+  4: 1.5rem,
+  5: 1rem,
+  6: .5rem
+);
+
+$display-font-weight: 300;
+$display-line-height: $headings-line-height;
+
+// Border radius
+$border-radius: 3px;
+
+// Merge the maps
+$all-colors: map-merge-multiple($blues, $indigos, $purples, $pinks, $reds, $oranges, $yellows, $greens, $teals, $cyans, $custom-colors);
 $utilities: map-merge($utilities,
     ("color": map-merge(map-get($utilities, "color"),
         (values: map-merge(map-get(map-get($utilities, "color"), "values"),
@@ -30,7 +49,19 @@ $utilities: map-merge($utilities,
         (values: map-merge(map-get(map-get($utilities, "background-color"), "values"),
             ($all-colors ),
           ),
-        ),
-      )));
+      ),
+    )
+  )
+);
 
+// Import Bootstrap utilities API
 @import "bootstrap/scss/utilities/api";
+
+// Apply custom heading sizes
+@each $level, $size in $display-font-sizes {
+  h#{$level} {
+    font-size: $size;
+    font-weight: $display-font-weight;
+    line-height: $display-line-height;
+  }
+}
