created first two Charts with some tests

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -132,6 +132,11 @@ a {
     text-decoration: none;
 }
 
+.link {
+    text-decoration: underline !important;
+    color: var(--bs-link-color) !important;
+}
+
 * {
     box-sizing: border-box;
 }
